Final iterations of KiwiSort